--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "@fullcalendar/list": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@mui/icons-material": "^5.14.8",
+    "@mui/lab": "^5.0.0-alpha.145",
     "@mui/material": "^5.14.8",
     "@mui/x-data-grid": "^6.12.1",
     "@nivo/bar": "^0.83.0",
     "@nivo/core": "^0.83.0",
     "@nivo/line": "^0.83.0",
+    "@nivo/pie": "^0.83.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.4.4",
+    "mui-datagrid-full-edit": "^1.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
