after something bad happend

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fullcalendar/list": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@mui/icons-material": "^5.14.8",
+    "@mui/joy": "^5.0.0-beta.12",
     "@mui/lab": "^5.0.0-alpha.145",
     "@mui/material": "^5.14.8",
     "@mui/x-data-grid": "^6.12.1",
@@ -20,13 +21,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "formik": "^2.4.4",
+    "js-cookie": "^3.0.5",
     "mui-datagrid-full-edit": "^1.2.5",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
