--- a/package.json
+++ b/package.json
@@ -22,16 +22,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "formik": "^2.4.4",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "mui-datagrid-full-edit": "^1.2.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
+    "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
